<resources>
    <string name="app_name">Game 2048</string>
    <string name="action_settings">Settings</string>
    <string name="field_size">Field size</string>
    <string name="swipe_speed">Swipe duration (ms)</string>
    <string name="new_block">New block position</string>
    <string name="block_center">In the center</string>
    <string name="block_center_eng" translatable="false">In the center</string>
    <string name="block_random">At random</string>
    <string name="block_random_eng" translatable="false">At random</string>
    <string name="action_rating">Rating</string>
    <string name="remember_my_achievements">Remember my achievements</string>
    <string name="score_text">Score:</string>
    <string name="enter_nickname">Enter nickname</string>
    <string name="submit">Submit</string>
    <string name="undo_button">Undo</string>
    <string name="restart_button">Restart</string>
    <string name="place_in_rating">Place</string>
    <string name="name_in_rating">Name</string>
    <string name="score_in_rating">Score</string>
    <string name="rating_load_error">Can\'t load rating. Server is unavailable</string>
    <string name="server_url" translatable="false">http://g2048pechatnov.tk:8890</string>
    <string name="score_update_error">Error connecting to server</string>
    <string name="add_score_to_rating">Would you like to add your result to the overall rating?</string>
    <string name="add_score_cancel">Cancel</string>
    <string name="add_score_add">Yes!</string>
    <string name="add_score_msg">Game over!</string>
    <string name="result_was_added">Your result was added to the overall rating</string>
</resources>
