<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             app:layout_behavior="@string/appbar_scrolling_view_behavior"
                                             tools:context="com.example.pechatnov.g2048.MainActivity"
                                             tools:showIn="@layout/activity_main">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
    >


        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:id="@+id/linearLayout"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintBottom_toTopOf="@+id/include" android:layout_marginBottom="8dp"
        >

            <android.support.v7.widget.AppCompatTextView
                    android:text="@string/score_text"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:layout_margin="8dp"
                    android:paddingTop="5dp"
                    android:id="@+id/scoreView"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:autoSizeTextType="uniform" android:typeface="sans" android:textStyle="bold"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="400"
            />
            <Button
                android:text="@string/score_text"
                android:background="@android:color/transparent"
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:layout_margin="8dp"
                android:gravity="left|center_vertical"
                android:id="@+id/scoreViewOld"
                android:visibility="gone"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_gravity="center_vertical"
                />
            <Button
                    android:text="@string/restart_button"
                    android:background="@drawable/button"
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:layout_margin="8dp"
                    android:id="@+id/buttonRestart"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="2"/>
            <Button
                    android:text="@string/undo_button"
                    android:background="@drawable/button"
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:layout_margin="8dp"
                    android:id="@+id/buttonUndo"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="2"/>
        </LinearLayout>

        <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                     xmlns:app="http://schemas.android.com/apk/res-auto"
                                                     xmlns:tools="http://schemas.android.com/tools"
                                                     android:layout_width="match_parent"
                                                     android:layout_height="wrap_content"
                                                     android:layout_gravity="top"
                                                     >

            <include layout="@layout/play_grid"
                     android:id="@+id/include"
                     tools:layout_editor_absoluteX="8dp"
                     android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintDimensionRatio="1:1" app:layout_constraintBottom_toBottomOf="parent"
                     android:layout_marginBottom="34dp" app:layout_constraintVertical_bias="0.01999998"/>
        </android.support.constraint.ConstraintLayout>


    </LinearLayout>

</android.support.constraint.ConstraintLayout>